# GC9A01-lcd-firmware

./: Cargo.toml  LICENSE  install.sh
src/: draw.rs  main.rs  rpi.rs  simulator.rs
