[package]
name = "gc9a01-lcd-firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.1"
embedded-hal = "0.2.7"
gc9a01a = "0.1.1"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
rppal = { version = "0.15.0", features = ["hal"] }
stm32-hal2 = { version = "^1.6.4", features = ["f411", "f4rt", "embedded_hal"]}
